# rhino

./: .gitattributes  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Package.swift  README.md  __init__.py  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  documentation.md  documentation.yml  feature_request.md
.github/workflows/: android-appcenter.yml  android-browserstack.yml  android-demos.yml  android-devicefarm.yml  android-perf.yml  android-upload.yml  angular-codestyle.yml  angular-demos.yml  angular.yml  c-demos.yml  dotnet-codestyle.yml  dotnet-demos.yml  dotnet.yml  flutter-demos.yml  flutter.yml  go-demos.yml  go.yml  ios-appcenter.yml  ios-browserstack.yml  ios-demos.yml  ios-devicefarm.yml  ios-perf.yml  ios-validate.yml  java-demos.yml  java-perf.yml  java.yml  link-check.yml  node-demos.yml  nodejs-demos.yml  nodejs-perf.yml  nodejs.yml  python-demos.yml  python-perf.yml  python-train.yml  python.yml  react-codestyle.yml  react-demos.yml  react-native-codestyle.yml  react-native-demos.yml  react-native-tests.yml  (+16 more)
binding/: .gitignore  README.md
binding/andriod/: settings.gradle
binding/android/: README.md
binding/angular/: .gitignore  README.md  angular.json  package.json  tsconfig.json
binding/dotnet/: .editorconfig  .gitignore  README.md  Rhino.sln
binding/flutter/: .gitignore  CHANGELOG.md  README.md  copy_resources.sh  pubspec.yaml
binding/go/: README.md  copy.sh  go.mod  rhino.go  rhino_native.go  rhino_posix.go  rhino_test.go  rhino_windows.go
binding/ios/: README.md  Rhino-iOS.podspec  Rhino.swift  RhinoErrors.swift  RhinoManager.swift  rhino_manager.swift
binding/java/: .gitignore  README.md  build.gradle  (+1 more)
binding/rust/: .gitignore  Cargo.toml  README.md  build.rs  copy.sh
binding/rust/src/: lib.rs  rhino.rs  util.rs
binding/rust/tests/: rhino_tests.rs
demo/: README.md
include/: README.md  picovoice.h  pv_rhino.h  pv_rhino_mcu.h
lib/: README.md
pvrhino.egg-info/: SOURCES.txt
resources/: DELETE_ME.TXT  README.md
rhino_python_test/: LICENSE.txt
(+1120 files in other folders)
