[package]
name = "pv_rhino"
version = "0.0.1"
edition = "2018"
description = "The Rust bindings for Picovoice's Rhino library"
license-file = "../../LICENSE"
homepage = "https://picovoice.ai/platform/rhino/"
repository = "https://github.com/Picovoice/rhino"
keywords = ["machine-learning", "audio"]
publish = false

include = [
	".gitignore",
	"build.rs",
	"Cargo.toml",
	"data/",
	"README.md",
	"src/",
]

[lib]
name = "rhino"
path = "src/lib.rs"
crate_type = ["lib"]

[dependencies]
libc = "0.2"
libloading = "0.7"
log = "0.4"

[dev-dependencies]
rodio = "0.14"
itertools = "0.10.1"
