[package]
name = "pv_rhino"
version = "2.1.8"
edition = "2018"
description = "The Rust bindings for Picovoice's Rhino library"
license = "Apache-2.0"
homepage = "https://picovoice.ai/platform/rhino/"
repository = "https://github.com/Picovoice/rhino"
keywords = [
	"Speech-to-Intent",
	"voice-commands",
	"voice-control",
	"speech-recognition",
	"natural-language",
]
publish = true

include = [
	".gitignore",
	"build.rs",
	"Cargo.toml",
	"data/",
	"README.md",
	"src/",
]

[lib]
name = "rhino"
path = "src/lib.rs"
crate_type = ["lib"]

[dependencies]
libc = "0.2"
libloading = "0.7"

[dev-dependencies]
itertools = "0.10.1"
rodio = "0.14"
serde_json = "1.0.91"
